[gd_scene load_steps=13 format=3 uid="uid://begqaiee2y7rg"]

[ext_resource type="AudioStream" uid="uid://cq06e2oopjstc" path="res://Audio/SpookyBackground3.wav" id="1_7dff0"]
[ext_resource type="Script" path="res://Scripts/MMenu/MainMenuController.gd" id="1_w2evn"]
[ext_resource type="Texture2D" uid="uid://b6y4b2p3sofcx" path="res://UI/Play.png" id="2_r7mu1"]
[ext_resource type="Texture2D" uid="uid://bf2iey67u5pmr" path="res://UI/UI - Settings.png" id="3_ccr4s"]
[ext_resource type="Texture2D" uid="uid://ehbs4qcq7apl" path="res://UI/Quit.png" id="4_8a8kn"]
[ext_resource type="Texture2D" uid="uid://ya36h5gemjl7" path="res://UI/logo title screen.png" id="6_im7ub"]
[ext_resource type="PackedScene" uid="uid://c8sg1selh1cfn" path="res://Models/TS2Props/Mesh/BLOODY PEN.fbx" id="7_50tjp"]

[sub_resource type="QuadMesh" id="QuadMesh_hhjy6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8qmmt"]
albedo_color = Color(0, 0, 0, 1)
roughness = 0.5

[sub_resource type="Environment" id="Environment_n2rfi"]
background_mode = 1
ambient_light_source = 2
tonemap_mode = 3
tonemap_exposure = 0.6
tonemap_white = 2.1
ssr_enabled = true
ssr_max_steps = 512
ssr_fade_in = 0.0256132
ssr_fade_out = 4.59479
ssao_enabled = true
ssil_enabled = true
sdfgi_enabled = true
glow_enabled = true
glow_intensity = 8.0
volumetric_fog_enabled = true
volumetric_fog_density = 0.6

[sub_resource type="SphereMesh" id="SphereMesh_q0qn1"]
radius = 0.085
height = 0.001
is_hemisphere = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hnfke"]
albedo_color = Color(0.262745, 0, 0, 1)
metallic = 0.95
roughness = 0.05

[node name="MainMenu" type="Node"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_7dff0")
autoplay = true
bus = &"Music"

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w2evn")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.535
anchor_right = 0.258
anchor_bottom = 1.0
offset_top = 0.199951
offset_right = -0.360046
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="Start_New" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(78, 78)
layout_mode = 2
size_flags_vertical = 3
action_mode = 0
keep_pressed_outside = true
icon = ExtResource("2_r7mu1")
flat = true
expand_icon = true

[node name="Option" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(78, 78)
layout_mode = 2
size_flags_vertical = 3
action_mode = 0
keep_pressed_outside = true
icon = ExtResource("3_ccr4s")
flat = true
expand_icon = true

[node name="Quit" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(78, 78)
layout_mode = 2
size_flags_vertical = 3
action_mode = 0
keep_pressed_outside = true
icon = ExtResource("4_8a8kn")
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.429
anchor_bottom = 0.432
offset_right = -0.458252
offset_bottom = 0.440002
texture = ExtResource("6_im7ub")
expand_mode = 3

[node name="Background" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Background"]
transform = Transform3D(0.992546, -0.0905666, 0.0815465, 0, 0.669131, 0.743145, -0.121869, -0.737606, 0.664143, -0.085, 0.235, 0)
current = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Background"]
transform = Transform3D(15, 0, 0, 0, -6.55671e-07, 15, 0, -15, -6.55671e-07, 0, 0, 0)
layers = 2
mesh = SubResource("QuadMesh_hhjy6")
surface_material_override/0 = SubResource("StandardMaterial3D_8qmmt")

[node name="Root Scene" parent="Background" instance=ExtResource("7_50tjp")]
transform = Transform3D(0.403275, 0.816269, 0.413612, -0.715997, -2.98023e-08, 0.698103, 0.56984, -0.577672, 0.584446, -0.136767, 0.010067, -0.130423)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background"]
environment = SubResource("Environment_n2rfi")

[node name="SpotLight3D" type="SpotLight3D" parent="Background"]
transform = Transform3D(-0.915513, -0.206815, 0.345057, 0.0853799, 0.738302, 0.669044, -0.393125, 0.64198, -0.658267, 0.124052, 0.247533, -0.436757)
layers = 2
light_energy = 2.0
light_indirect_energy = 3.0
light_volumetric_fog_energy = 0.1
shadow_enabled = true
shadow_blur = 0.059
spot_range = 0.568114
spot_attenuation = 2.63902
spot_angle = 32.0296
spot_angle_attenuation = 2.46229

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0222929, -0.000272449, -0.241157)
mesh = SubResource("SphereMesh_q0qn1")
surface_material_override/0 = SubResource("StandardMaterial3D_hnfke")

[node name="ReflectionProbe" type="ReflectionProbe" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0302394, 0.038746, -0.243669)
enable_shadows = true
cull_mask = 1048574
ambient_mode = 2

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Start_New" to="Menu" method="_on_start_new_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Option" to="Menu" method="_on_option_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Quit" to="Menu" method="_on_quit_pressed"]
